Fixes for retina display. Added list of related pages by same author

--- a/index.html
+++ b/index.html
@@ -823,6 +823,43 @@
             </li>
           </ul>
         </section>
+        <section>
+          <h2>Related pages by the same author</h2>
+          <ul>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/baltimore-classification/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Baltimore Classification of Viruses</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/hiv/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >HIV (Human Immunodeficiency Virus)</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/hardy-weinberg-equilibrium-model/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >The Hardy-Weinberg Equilibrium Model</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://chrisnajman.github.io/genetic-drift/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Genetic Drift: Random Sampling</a
+              >
+            </li>
+          </ul>
+        </section>
       </footer>
     </div>
   </body>
